<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BMI APP</string>
    <string name="next"><u>Next</u></string>
    <string name="BMIAnalyzer">BMI Analyzer</string>
    <string name="welcome">Welcome Back</string>
    <string name="alreadyLogin">If you already have an account, log in</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="noAccount">You Do Not Have An Account? </string>
    <string name="signUp">Sign Up</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="alreadyRegister">If you do not already have an account</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="confirmPassword">Re_Password</string>
    <string name="createButton">Create</string>
    <string name="haveAccount">You Have An Account?</string>
    <string name="completeYourInformation">Complete Your Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="saveData">Save Data</string>
    <string name="kg">Kg</string>
    <string name="cm">Cm</string>
    <string name="currentStatus">Current Status</string>
    <string name="oldStatus">Old Status</string>
    <string name="addFood">Add Food</string>
    <string name="addRecord">Add Record</string>
    <string name="viewFood">View Food</string>
    <string name="logout">Logout</string>
    <string name="newRecord">New Record</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="addFoodDetails">Add Food Details</string>
    <string name="category">Category</string>
    <string name="calorie">Calory</string>
    <string name="calOnG">cal/g</string>
    <string name="photo">Photo</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="save">Save</string>
    <string name="foodList">Food List</string>
    <string name="editFoodDetails">Edit Food Details</string>
    <string name="edit">Edit</string>
    <string name="x">X</string>
</resources>