<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/SuperLinear"
    android:orientation="vertical">
    <TextView
        android:id="@+id/FirstTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:padding="12dp"
        android:text="@string/BMIAnalyzer"
        android:background="@color/main_col"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstSubLinear"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/SecondTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:layout_marginTop="60dp"
            android:text="@string/createNewAccount"
            android:textSize="40dp"
            android:textColor="@color/main_col"
            />
        <TextView
            android:id="@+id/ThirdTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/alreadyRegister"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/gray"
            />
    </LinearLayout>
    /*Register Process*/
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SecondSubLinear"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/r_FirstEditTextUsername"
                android:layout_width="360dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:hint="@string/name"
                android:textSize="20dp"
                android:inputType="text"
                android:backgroundTint="@color/main_col"
                />
            <EditText
                android:id="@+id/r_SecondEditTextEmail"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:textSize="20dp"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/main_col"
                />
            <EditText
                android:id="@+id/r_ThirdEditTextPassword"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:backgroundTint="@color/main_col"
                />
            <EditText
                android:id="@+id/r_FourthEditTextPasswordConfirm"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:hint="@string/confirmPassword"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:backgroundTint="@color/main_col"
                />
            <Button
                android:id="@+id/r_FirstButtonLogin"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/main_col"
                android:text="@string/createButton"
                android:textSize="22dp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdSubLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        >
        <TextView
            android:id="@+id/fourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/haveAccount"
            android:textSize="20dp"
            android:textColor="@color/gray"
            />
        <Button
            android:id="@+id/r_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            android:textSize="20dp"
            android:textColor="@color/main_col"
            android:clickable="true"
            android:background="none"
            />
    </LinearLayout>
</LinearLayout>