<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/SuperLinear"
    android:orientation="vertical">
    <TextView
        android:id="@+id/FirstTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:padding="12dp"
        android:text="@string/BMIAnalyzer"
        android:background="@color/main_col"
        android:layout_marginBottom="40dp"
        />
    <TextView
        android:id="@+id/SecondTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/addFoodDetails"
        android:textAlignment="center"
        android:textColor="@color/main_col"
        android:textSize="40dp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        />
    /* Food Name  */
    <LinearLayout
        android:id="@+id/FoodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/FoodNameTextView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textColor="@color/main_col"
            android:fontFamily="serif"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            />
        <EditText
            android:id="@+id/af_name"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_col"
            android:inputType="text"
            />
    </LinearLayout>
    /*Category*/
    <LinearLayout
        android:id="@+id/af"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/CategoryTextView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/category"
            android:textColor="@color/main_col"
            android:fontFamily="serif"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            />
        <Spinner
            android:id="@+id/af_category"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_col"

            />
    </LinearLayout>
    /*calory*/
    <LinearLayout
        android:id="@+id/af_calorieLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/CaloryTextView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/calorie"
            android:textColor="@color/main_col"
            android:fontFamily="serif"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            />
        <EditText
            android:id="@+id/af_calorie"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_col"
            android:inputType="number"
            />
        <TextView
            android:id="@+id/CalOnGTextView"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/calOnG"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif-thin"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            />
    </LinearLayout>
    /*photo*/
    <LinearLayout
        android:id="@+id/imageLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/PhotoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textColor="@color/main_col"
            android:textStyle="bold"
            android:textSize="22dp"
            android:fontFamily="serif"
            android:paddingLeft="20dp"
            />
        <ImageView
            android:id="@+id/FoodImageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/Food"
            android:layout_gravity="start"
            android:layout_marginBottom="30dp"

           />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/main_col"
            android:text="@string/uploadPhoto"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif"
            android:layout_marginRight="20dp"
            />
        <Button
            android:id="@+id/af_save"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/main_col"
            android:text="@string/save"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif"
            />


    </LinearLayout>

</LinearLayout>