<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/SuperLinear"
    android:orientation="vertical">
    <TextView
        android:id="@+id/FirstTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:padding="12dp"
        android:text="@string/BMIAnalyzer"
        android:background="@color/main_col"
        android:layout_marginBottom="40dp"
        />
    <TextView
        android:id="@+id/SecondTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/newRecord"
        android:textAlignment="center"
        android:textColor="@color/main_col"
        android:textSize="40dp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        />
    /*Weight*/
    <LinearLayout
        android:id="@+id/ThirdSupLinear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/WeightTextView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/weight"
            android:textColor="@color/main_col"
            android:fontFamily="serif"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            />
        <Button
            android:id="@+id/decrement"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:textColor="@color/main_col"
            android:background="@null"
            android:textStyle="bold"
            android:text="@string/minus"
            android:textSize="25dp"
            />

        <TextView
            android:id="@+id/display"
            android:layout_width="70dp"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            android:text="1"
            android:textColor="@android:color/black"
            android:inputType="number"
            android:gravity="center"
            android:textSize="25dp"
            />
        <Button
            android:id="@+id/increment"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:textSize="25sp"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/main_col"
            android:background="@null"
            android:text="@string/plus"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:id="@+id/kg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kg"
            android:textColor="@color/main_col"
            android:textStyle="bold"
            android:paddingTop="15dp"
            />

    </LinearLayout>
    /*length*/
    <LinearLayout
        android:id="@+id/FourthSupLinear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
        <TextView
            android:id="@+id/LengthTextView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/length"
            android:textColor="@color/main_col"
            android:fontFamily="serif"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            />
        <Button
            android:id="@+id/decrement2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:background="@null"
            android:textStyle="bold"
            android:text="@string/minus"
            android:textSize="25dp"
            android:textColor="@color/main_col"
            />

        <TextView
            android:id="@+id/display2"
            android:layout_width="70dp"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            android:text="1"
            android:textColor="@android:color/black"
            android:inputType="number"
            android:gravity="center"
            android:textSize="25dp"
            />
        <Button
            android:id="@+id/increment2"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:textSize="25sp"
            android:backgroundTint="@android:color/white"
            android:background="@null"
            android:text="@string/plus"
            android:layout_marginRight="10dp"
            android:textColor="@color/main_col"
            />
        <TextView
            android:id="@+id/cm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cm"
            android:textColor="@color/main_col"
            android:textStyle="bold"
            android:paddingTop="10dp"
            />
    </LinearLayout>

    /*Date*/
    <LinearLayout
        android:id="@+id/FifthSupLinear5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
        <TextView
            android:id="@+id/DateTextView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:textColor="@color/main_col"
            android:fontFamily="serif"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            />
        <EditText
            android:id="@+id/DateEditText"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_col"
            android:inputType="date"

            />
    </LinearLayout>
    /*Time*/
    <LinearLayout
        android:id="@+id/FifthSupLinear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
        <TextView
            android:id="@+id/TimeTextView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:textColor="@color/main_col"
            android:fontFamily="serif"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            />
        <EditText
            android:id="@+id/TimeEditText"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_col"
            android:inputType="date"
            />
    </LinearLayout>
    <Button
        android:id="@+id/saveData"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/main_col"
        android:textColor="@color/white"
        android:text="@string/saveData"
        android:textSize="22dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        />


</LinearLayout>