<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/SuperLinear"
    android:orientation="vertical">
    <TextView
        android:id="@+id/FirstTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:padding="12dp"
        android:text="@string/BMIAnalyzer"
        android:background="@color/main_col"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:id="@+id/HiTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:text="Hi, Mohammed"
        android:textSize="35dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="serif"
        />
    <TextView
        android:id="@+id/CurrentStatusTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/currentStatus"
        android:textColor="@color/main_col"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:fontFamily="serif"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/StatusTextView"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="Normal (Still Good)"
        android:textSize="30dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:id="@+id/OldStatusTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/oldStatus"
        android:textColor="@color/main_col"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:fontFamily="serif"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:id="@+id/boxLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/box1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="20/12/2020     Normal"
            android:textSize="30dp"
            android:fontFamily="serif"
            android:paddingTop="60dp"
            />
        <TextView
            android:id="@+id/box2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="60Kgm   170Cm"
            android:textSize="30dp"
            android:fontFamily="serif"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/addFood"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_col"
            android:text="@string/addFood"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="40dp"
            />
        <Button
            android:id="@+id/addRecord"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_col"
            android:text="@string/addRecord"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/viewFoodLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/viewFood"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_col"
            android:textStyle="bold"
            android:textSize="16dp"
            android:text="@string/viewFood"
            android:layout_marginLeft="30dp"
            />
        <Button
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="none"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp"
            android:fontFamily="serif"
            ></Button>

    </LinearLayout>



</LinearLayout>